samples/_failures_safe/1761158128_674b47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_433a18cd.c: In function ‘main’:
./samples/SAFE/__tmp_433a18cd.c:153:9: error: expected expression at end of input
  153 |         input_text[len -
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_433a18cd.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_433a18cd.c:153:9: error: expected declaration or statement at end of input
